added color and css to all

--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veg Fried Rice </title>
+    <link rel="stylesheet" href="../style.css">
 </head>
-<body>
+<body class="rice">
+    <a style="color:black;padding:10px" href="../index.html">home</a>
     <h1>VEG FRIED RICE</h1>
     <img src="../images/fried-rice.jpg" alt="fried rice image" height="300">
     <h2>Description</h2>
@@ -68,6 +70,6 @@ Add chopped garlic, ginger, and green chilies. Sauté for a few seconds.</li>
 
     </ol>
 
-    <a href="../index.html">home</a>
+    
 </body>
 </html>
